# python_base_boilerplate

./: pyproject.toml
app/: __main__.py  application.py  lifetime.py
app/database/: dependencies.py
app/repositories/: base.py
app/routes/: router.py
app/routes/docs/: __init__.py
config/: app.py  gunicorn_runner.py  logging.py
docker/: .env.example  dctl.sh  docker-compose.yml
docker/containers/python/: Dockerfile
