[tool.poetry]
name = "fast-api-base"
version = "0.1.0"
description = ""
authors = ["denn <denn@test.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
gunicorn = "^22.0.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
yarl = "^1.9.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
ujson = "^5.9.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
python-ulid = {extras = ["pydantic"], version = "^2.5.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
